--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div id="header">
             <div class="logo">
-                <img src="/scr/img/logo.svg" alt="Logo">
+                <img src="./scr/img/logo.svg" alt="Logo">
             </div>
             <div class="start-free">
                 <button class="try-free">Try It Free</button>
